--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</ul> -->
 				<ul class="copyright">
 					<li><a href="https://www.wechatkorea.net/dev/" target="_blank">위챗 개발자 공식 커뮤니티</a></li>
-					<li><a href="https://www.wechatkorea.net/search/" target="_blank">위챗 컨텐츠 검색</a></li>
+					<!-- <li><a href="https://www.wechatkorea.net/search/" target="_blank">위챗 컨텐츠 검색</a></li> -->
 					<li><a href="https://www.wechatkorea.net/news/" target="_blank">매거진</a></li>
 					<!-- <li><a href="https://www.startchina.kr/sms/" style="color:#f44265;font-weight:bold;" target="_blank">중국 가상 전화 번호 생성</a></li> -->
 					<!-- <li><a href="https://www.trendtalk.kr/kakao/" target="_blank">카카오톡 문의</a></li> -->
