--- a/fb.kr/index.html
+++ b/fb.kr/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <!-- Start: Changeable By Page -->
-    <meta http-equiv="refresh" content="0; URL=https://www.facebook.com/304848623673544/">
+    <meta http-equiv="refresh" content="0; URL=https://www.facebook.com/wechatkorea/">
     <title>페이스북 페이지 (Facebook Page) - 위챗마케팅코리아</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
 		<meta property="og:title" content="페이스북 페이지 (Facebook Page) - 위챗마케팅코리아"/>
